# healthcare-processing-prototype

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  agents
.claude/tasks/: mvp-architecture-checkpoint.md  mvp-tables-checkpoint.md
client/: api_client.py  emitter.py  factory.py  main.py  models.py
infra/loki/: loki-config.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
sdlc/notes/: learnings.md  mpi-bottlenecks.md  mpi-consistency-design.md  mpi-service-rules.md  stackholder_profile.md  stakeholder_profile.md
sdlc/plans/: mpi-service-rules.md  mvp-architecture.md  mvp-dev-steps.md  mvp-future-enhancements.md  mvp-tables.md
sdlc/templates/: template_Dockerfile
services/ingestion-gateway/: ingest_router.py  ingest_service.py  main.py
services/mpi/: internal_router.py  main.py  mpi_data_provider.py  mpi_service.py
services/notification/: main.py  notification_service.py
services/npi-registry/: main.py  npi_data_provider.py  npi_models.py  npi_router.py  npi_service.py
services/patient-api/: internal_router.py  main.py  models.py  patient_coordinator_service.py  patient_service.py  patient_service_coordinator.py  patients_router.py
services/patient-data/: internal_router.py  main.py  patient_data_models.py  patient_data_provider.py  patient_data_service.py
services/patient-event-reconciliation/: internal_router.py  main.py  patient_event_models.py  patient_event_reconciliation_data_provider.py  patient_event_reconciliation_rules.py  patient_event_reconciliation_service.py
services/patient-reconciliation-worker/: main.py  patient_event_reconciliation_rules.py  reconciliation_event_worker_data_provider.py  reconciliation_event_worker_metrics.py  reconciliation_event_worker_service.py
services/patient-summary/: Dockerfile  agent_service.py  agent_summary_service.py  agentic_handler.py  internal_router.py  main.py  patient_summary_data_provider.py  patient_summary_models.py  patient_summary_service.py
shared/: cache_service.py  custom-logging.yaml  data_provider.py  event_models.py  json_logger.py  message_bus.py  metrics_middleware.py  metrics_router.py  opentelemetry_config.py  singleton_store.py  trace_helpers.py
(+33 files in other folders)
